reset bootstrap css to default, added custom css sheet instead. I wish making a website wasn't terribly slow. Navbar mostly done, bug with collapse dropdown button size

--- a/webPage/tools/styleSheets/bootstrap/bootstrap.css
+++ b/webPage/tools/styleSheets/bootstrap/bootstrap.css
@@ -3947,6 +3947,8 @@ tbody.collapse.show {
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 0.5rem 1rem;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 .navbar > .container,
